Implement upload roles and permission policies for STS role chaining.